fixed overlap
problem was flex was set to rows in the #root element, had to switch to column

--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,13 @@
   padding: 0;
 }
 #root {
-  width: 100vw;
-  min-height: 100vh;
-  background-color: darkgrey;
   display: flex;
+  flex-direction: column;
+  background-color: darkgrey;
   justify-content: center;
   align-items: center;
+  width: 100vw;
+  min-height: 100vh;
 }
 #iphoneCanvas {
   display: flex;
